--- a/a/amiel-szymon/index.html
+++ b/a/amiel-szymon/index.html
@@ -50,7 +50,7 @@
 						<th>Days</th>
 						<th>Bodies processed</th>
 						<th>Wood needed<sup>*</sup> [t]</th>
-						<th>Days needed<sup>†</sup></th>
+						<th>Days needed<sup>&dagger;</sup></th>
 					</tr>
 				</thead>
 				<tbody>
@@ -94,7 +94,7 @@
 				<tfoot>
 				<tr>
 					<td colspan="4">* 250 kg fresh wood per body<br />
-					† 0.63 metric tons of wood per worker and day, for 43 workers</td>
+					&dagger; 0.63 metric tons of wood per worker and day, for 43 workers</td>
 				</tr>
 				</tfoot>
 			</table>
