--- a/a/auschwitz/index.html
+++ b/a/auschwitz/index.html
@@ -122,7 +122,7 @@
 						<td>Tib&egrave;re Kremer (1951)</td>
 					</tr>
 					<tr>
-						<td>5–5,500,000</td>
+						<td>5&ndash;5,500,000</td>
 						<td>Krakow Auschwitz trial (1947), <i>Le Monde</i> (1978)</td>
 					</tr>
 					<tr>
@@ -138,7 +138,7 @@
 						<td>Rudolf Vrba, aka Walter Rosenberg, Eichmann Trial (1961)</td>
 					</tr>
 					<tr>
-						<td>1,5–3,500,000</td>
+						<td>1,5&ndash;3,500,000</td>
 						<td>Historian Yehuda Bauer (1982, p. 215)</td>
 					</tr>
 					<tr>
@@ -162,7 +162,7 @@
 						<td>Historian Raul <a href="/bibliography/index.html#Hilberg">Hilberg</a> (1961, 1985, 2003)</td>
 					</tr>
 					<tr>
-						<td>1,1–1,500,000</td>
+						<td>1,1&ndash;1,500,000</td>
 						<td>Historians I. Gutman, Franciszek Piper (1994)</td>
 					</tr>
 					<tr>
@@ -170,15 +170,15 @@
 						<td><a href="/bibliography/index.html#Pressac1989">J.‑C. Pressac</a> (1989), <i>Dictionnaire des noms propres</i> (1992)</td>
 					</tr>
 					<tr>
-						<td>800–900,000</td>
+						<td>800&ndash;900,000</td>
 						<td>Historian Gerald Reitlinger (1953 and later)</td>
 					</tr>
 					<tr>
-						<td>775–800,000</td>
+						<td>775&ndash;800,000</td>
 						<td><a href="/bibliography/index.html#Pressac1993">Jean-Claude Pressac</a> (1993)</td>
 					</tr>
 					<tr>
-						<td>630–710,000</td>
+						<td>630&ndash;710,000</td>
 						<td><a href="/bibliography/index.html#Pressac1994">Jean-Claude Pressac</a> (1994)</td>
 					</tr>
 					<tr>
