--- a/d/demography-jewish/index.html
+++ b/d/demography-jewish/index.html
@@ -31,7 +31,7 @@
 				For these reasons, it would have taken several years for these events to settle down, and for government authorities to get reestablished and organized. Only then would it have been possible to conduct any meaningful population statistics of any ethnic or religious group. Thus, anyone who claimed already in 1944, 1945 or 1946 to have secure knowledge in that matter cannot be trusted.
 			</p>
 			<p>
-				Furthermore, Jewish population statistics are more complex than those of other groups, precisely because this group is not largely confined to a certain geographic area as most other groups. Jews have always had the tendency of migrating faster and more easily around the globe than other groups. In addition, such migrations are not necessarily trackable, as being Jewish is very much a question of definition &mdash; and a very fluid one at that. Who counts as a Jew? Is it an ethnicity or a religious group? The answers often depend on who is asked those questions in which context, and when.
+				Furthermore, Jewish population statistics are more complex than those of other groups, precisely because this group is not largely confined to a certain geographic area as most other groups. Jews have always had the tendency of migrating faster and more easily around the globe than other groups. In addition, such migrations are not necessarily trackable, as being Jewish is very much a question of definition &mdash; and a very fluid one at that. Who counts as a Jew? Is it an ethnicity or a religious group? The answers often depend on who is asked those questions in which context, and when.
 			</p>
 			<h4>
 				<a id="Demographic"></a>Demographic Studies
@@ -273,7 +273,7 @@
 					<tr>
 						<td><a href="/f/france/index.html">France</a></td>
 						<td> ca. 300,000 </td>
-						<td> 223,866 –238,000 </td>
+						<td> 223,866 &ndash;238,000 </td>
 					</tr>
 					<tr>
 						<td><a href="/g/greece/index.html">Greece</a></td>
