--- a/e/exaggerated-death-tolls/index.html
+++ b/e/exaggerated-death-tolls/index.html
@@ -134,7 +134,7 @@
 						<td> 2 million </td>
 						<td> 200,000 </td>
 						<td> 10 </td>
-						<td> 80,000+† </td>
+						<td> 80,000+&dagger; </td>
 						<td> ±25 </td>
 					</tr>
 					<tr>
@@ -150,7 +150,7 @@
 				<tr>
 					<td colspan="6">
 					<p>
-						* based on disturbed soil volume found; † enough disturbed soil volume was found to accommodate the claimed 80,000 buried victims, but more are said to have been killed later without being buried; however, tracelessly burning those bodies would have been nearly impossible with the means and the time at the camp&rsquo;s disposal; the latter is also true for Belzec and Treblinka; ‡ based on number of trees felled in the camp&rsquo;s vicinity. If taking this as a measure, the numbers for Belzec, Sobib&oacute;r and Treblinka would be quite similar to Che&#322;mno&rsquo;s numbers. </td>
+						* based on disturbed soil volume found; &dagger; enough disturbed soil volume was found to accommodate the claimed 80,000 buried victims, but more are said to have been killed later without being buried; however, tracelessly burning those bodies would have been nearly impossible with the means and the time at the camp&rsquo;s disposal; the latter is also true for Belzec and Treblinka; ‡ based on number of trees felled in the camp&rsquo;s vicinity. If taking this as a measure, the numbers for Belzec, Sobib&oacute;r and Treblinka would be quite similar to Che&#322;mno&rsquo;s numbers. </td>
 				</tr>
 				</tfoot>
 			</table>
