--- a/g/groning-oskar/index.html
+++ b/g/groning-oskar/index.html
@@ -22,7 +22,7 @@
 			<audio controls src="/_assets/GroningOskar.mp3">
 			</audio>
 			<p>
-				Oskar Gr&ouml;ning (10 June 1921 – 9 March 2018), SS <i>Unterscharf&uuml;hrer,</i> was deployed from late September 1942 in the department that stored and administered inmate valuables at the <a href="/a/auschwitz/index.html">Auschwitz</a> Camp. Although several criminal investigations were initiated after the war, all were eventually shelved.
+				Oskar Gr&ouml;ning (10 June 1921 &ndash; 9 March 2018), SS <i>Unterscharf&uuml;hrer,</i> was deployed from late September 1942 in the department that stored and administered inmate valuables at the <a href="/a/auschwitz/index.html">Auschwitz</a> Camp. Although several criminal investigations were initiated after the war, all were eventually shelved.
 			</p>
 			<p>
 				He volunteered to give an interview for the 2005 BBC atrocity-propaganda movie <i>Auschwitz: Inside the Nazi State.</i> During that interview, he stated that he wanted to speak out also in order <q>to oppose the Holocaust deniers,</q> and then he exclaimed (see the <a href="https://de.wikipedia.org/wiki/Oskar_Gr%C3%B6ning">German Wikipedia entry on Gr&ouml;ning</a>):
