--- a/j/jager-report/index.html
+++ b/j/jager-report/index.html
@@ -145,7 +145,7 @@
 					<tr>
 						<td> Kaunas, total, of which </td>
 						<td> 23,205 </td>
-						<td> 209† </td>
+						<td> 209&dagger; </td>
 					</tr>
 					<tr>
 						<td> Fort IV </td>
@@ -362,7 +362,7 @@
 				<tr>
 					<td colspan="3">
 					<p>
-						† Plus <q>thousands</q> on 28 June; total for Kaunas &amp; Riga in EM 48 of 10 Aug. as 28,000.<br />
+						&dagger; Plus <q>thousands</q> on 28 June; total for Kaunas &amp; Riga in EM 48 of 10 Aug. as 28,000.<br />
 						* A total of 2,231, but all at other (mostly later) dates.
 					</p>
 					</td>
