--- a/k/kosow-podlaski/index.html
+++ b/k/kosow-podlaski/index.html
@@ -22,7 +22,7 @@
 			<audio controls src="/_assets/KosowPodlaski.mp3">
 			</audio>
 			<p>
-				The <a href="/p/polish-underground-reports/index.html">Polish underground</a> <q>Memorandum on the Situation in the Country for the Period July 16 –August 25, 1942</q> claimed four death camps in existence in German-occupied Poland: <a href="/b/belzec/index.html">Be&#322;&#380;ec</a>, <a href="/t/treblinka/index.html">Treblinka II</a>, <a href="/s/sobibor/index.html">Sobib&oacute;r</a> and one at <q>Kos&oacute;w Podlaski.</q> (See <a href="/bibliography/index.html#Mattogno2021e">Mattogno 2021e</a>, p. 97, for the source.)
+				The <a href="/p/polish-underground-reports/index.html">Polish underground</a> <q>Memorandum on the Situation in the Country for the Period July 16 &ndash;August 25, 1942</q> claimed four death camps in existence in German-occupied Poland: <a href="/b/belzec/index.html">Be&#322;&#380;ec</a>, <a href="/t/treblinka/index.html">Treblinka II</a>, <a href="/s/sobibor/index.html">Sobib&oacute;r</a> and one at <q>Kos&oacute;w Podlaski.</q> (See <a href="/bibliography/index.html#Mattogno2021e">Mattogno 2021e</a>, p. 97, for the source.)
 			</p>
 			<p>
 				No such town exists, but there is a town called Soko&#322;&oacute;w Podlaski some 80 km east of Warsaw. All historians agree, however, that no such camp with any mass-murder facility ever existed in or near this or any similarly named town. This phantom extermination camp is a creation of black-propaganda sources.
