--- a/l/lumberjacks/index.html
+++ b/l/lumberjacks/index.html
@@ -85,7 +85,7 @@
 						</th>
 						<th>
 						<p>
-							Lumberjacks†
+							Lumberjacks&dagger;
 						</p>
 						</th>
 					</tr>
@@ -368,7 +368,7 @@
 				<tfoot>
 				<tr>
 					<td colspan="7">* On average, a 50-year-old spruce forest yields some 450 metric tons of wood per hectare (100 m &times; 100 m) or 201 tons per American-Football field (<a href="/bibliography/index.html#Colombo">Colombo</a>, p. 161). Fell all trees of such a forest of this size to obtain the required amount of wood.<br />
-					† Number required for the time span claimed, which varies from case to case. <a href="/b/blyazer-a/index.html">Blyazer</a> gave the number of lumberjacks in his team (15), who would have finished their work sometime in 1948.<br />
+					&dagger; Number required for the time span claimed, which varies from case to case. <a href="/b/blyazer-a/index.html">Blyazer</a> gave the number of lumberjacks in his team (15), who would have finished their work sometime in 1948.<br />
 					‡ In a later interview, <a href="/s/steyuk-yakov/index.html">Steyuk</a> doubled the number of bodies burned. See the values listed for <a href="/a/adametz-gerhard/index.html">Adametz</a>, <a href="/d/doliner-iosif/index.html">Doliner</a>, <a href="/k/kuklia-vladislav/index.html">Kuklia</a>.</td>
 				</tr>
 				</tfoot>
