--- a/n/nebe-arthur/index.html
+++ b/n/nebe-arthur/index.html
@@ -43,7 +43,7 @@
 				After the war, a number of manipulative maneuvers by postwar investigators was used to create the following myth: Nebe, together with <a href="/w/widmann-albert/index.html">Albert Widmann</a>, a chemist at the German Institute for Criminological Technology in Berlin (<i>Kriminaltechnisches Institut</i>), went on a trip from Berlin to Minsk in order to do some tests there to find out how best to mass-murder people. The two are said to have traveled a thousand kilometers east with 400 kg of explosives in their car to test whether it was feasible to blow up mentally ill people with dynamite. The story is so outrageously absurd that it boggles the mind why it ever found credence. Since this story is closely linked to investigations related to <a href="/w/widmann-albert/index.html">Albert Widmann</a>, the issue is discussed in more detail in the entry dedicated to him.
 			</p>
 			<p>
-				(For more details, see also <a href="/bibliography/index.html#Alvarez2023">Alvarez 2023</a>, pp. 219-225; <a href="/bibliography/index.html#Mattogno2017">Mattogno 2017</a>, pp. 10–16; <a href="/bibliography/index.html#Mattogno2022c">2022c</a>, pp. 293-302.)
+				(For more details, see also <a href="/bibliography/index.html#Alvarez2023">Alvarez 2023</a>, pp. 219-225; <a href="/bibliography/index.html#Mattogno2017">Mattogno 2017</a>, pp. 10&ndash;16; <a href="/bibliography/index.html#Mattogno2022c">2022c</a>, pp. 293-302.)
 			</p>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
