--- a/o/open-air-incinerations/index.html
+++ b/o/open-air-incinerations/index.html
@@ -166,7 +166,7 @@
 				If <i>freshly</i> <i>cut</i> wood is used instead, the amount required easily doubles, due to the high water content of fresh wood. For the German camps, assuming 250 kg of fresh (green) wood per body is thus a very low, very conservative estimate. A more realistic value is probably twice as high: perhaps 500 kg per body.
 			</p>
 			<p>
-				Self-immolating bodies are not part of the scientific literature, as none have ever been discovered during single-body or large-scale cremations. In fact, after a series of experiments, <a href="/bibliography/index.html#Yerman">Yerm&aacute;n <i>et al.</i></a> bluntly concluded: <q>Self-sustained burning of animal carcasses in an open pyre configuration is not possible.</q>
+				Self-immolating bodies are not part of the scientific literature, as none have ever been discovered during single-body or large-scale cremations. In fact, after a series of experiments, <a href="/bibliography/index.html#Yerman">Yerm&aacute;n <i>et al.</i></a> bluntly concluded: <q>Self-sustained burning of animal carcasses in an open pyre configuration is not possible.</q>
 			</p>
 			<p>
 				A 50-year-old spruce forest usually yields some 500 solid cubic meters of wood per hectare (100 m &times; 100 m, a little more than two American football fields). This amounts to about 450 metric tons of wood. Hence, a square kilometer of such a forest contains some 45,000 metric tons of wood, and a square mile some 116,550 metric tons of wood.
@@ -239,7 +239,7 @@
 						</th>
 						<th>
 						<p>
-							Height†
+							Height&dagger;
 						</p>
 						</th>
 					</tr>
@@ -404,7 +404,7 @@
 				</tbody>
 				<tfoot>
 				<tr>
-					<td colspan="10">Source: <a href="/bibliography/index.html#Mattogno2016b">Mattogno 2016b</a>, p. 28. * Fresh wood required, at 250 kg per body. † Stacking height just for the fresh wood, at 0.9 kg/m&sup3;, and a packing density of 1.4., calculated for the largest pit area indicated. ‡ Together with <a href="/m/mordowicz-czeslaw/index.html">Czes&#322;aw Mordowicz</a>.</td>
+					<td colspan="10">Source: <a href="/bibliography/index.html#Mattogno2016b">Mattogno 2016b</a>, p. 28. * Fresh wood required, at 250 kg per body. &dagger; Stacking height just for the fresh wood, at 0.9 kg/m&sup3;, and a packing density of 1.4., calculated for the largest pit area indicated. ‡ Together with <a href="/m/mordowicz-czeslaw/index.html">Czes&#322;aw Mordowicz</a>.</td>
 				</tr>
 				</tfoot>
 			</table>
