--- a/s/skarzynski-kazimierz/index.html
+++ b/s/skarzynski-kazimierz/index.html
@@ -22,7 +22,7 @@
 			<audio controls src="/_assets/SkarzynskiKazimierz.mp3">
 			</audio>
 			<p>
-				Kazimierz Skar&#380;y&#324;ski was a Pole living in the village of W&oacute;lka Okrąglik near the <a href="/t/treblinka/index.html">Treblinka</a> Camp who testified twice in front of a Soviet investigative commission about the Treblinka Camp, once on 22 August 1944, and then again one day later.
+				Kazimierz Skar&#380;y&#324;ski was a Pole living in the village of W&oacute;lka Okr&#261;glik near the <a href="/t/treblinka/index.html">Treblinka</a> Camp who testified twice in front of a Soviet investigative commission about the Treblinka Camp, once on 22 August 1944, and then again one day later.
 			</p>
 			<p>
 				In his first deposition, he claimed to know from Jews incarcerated at Treblinka that Jews were killed <q>in hermetically sealed chambers [&hellip;] by pumping out the air.</q> However, creating a vacuum in a brick-and-mortar building is technically impossible (the external pressure would crush the walls), hence most certainly was not done.
