--- a/t/treblinka/index.html
+++ b/t/treblinka/index.html
@@ -166,7 +166,7 @@
 						<td> &mdash; </td>
 					</tr>
 					<tr>
-						<td> <a href="/k/krzepicki-abraham/index.html">Abraham Krzepicki</a> / after 26 Dec. 1942 </td>
+						<td> <a href="/k/krzepicki-abraham/index.html">Abraham Krzepicki</a> / after 26 Dec. 1942 </td>
 						<td> gas, coming from pipes on the roof </td>
 						<td> saw normal shower room; built crematorium building </td>
 					</tr>
@@ -209,13 +209,13 @@
 						<td> <a href="/k/kon-abe/index.html">Abe Kon</a> / 17 August 1944 </td>
 						<td> vacuum </td>
 						<td> 12 chambers, 6 m &times; 6 m each<br />
-						400 persons per chamber </td>
+						400 persons per chamber </td>
 					</tr>
 					<tr>
 						<td> <a href="/k/kon-abe/index.html">Abe Kon</a> / 22 August 1944 </td>
 						<td> gas (<q>turned on</q>) </td>
 						<td> 12 chambers, 6 m &times; 6 m each<br />
-						400 persons per chamber </td>
+						400 persons per chamber </td>
 					</tr>
 					<tr>
 						<td> <a href="/k/kon-abe/index.html">Abe Kon</a> / 9 October 1945 </td>
@@ -410,7 +410,7 @@
 					</tr>
 					<tr>
 						<td> 1,200,000 </td>
-						<td colspan="2"> Franciszek Ząbecki </td>
+						<td colspan="2"> Franciszek Z&#261;becki </td>
 					</tr>
 					<tr>
 						<td> 1,074,000 </td>
