--- a/w/witnesses/index.html
+++ b/w/witnesses/index.html
@@ -492,7 +492,7 @@
 				<li><a href="/w/warszawski-szyja/index.html">Warszawski, Szyja</a></li>
 				<li><a href="/w/wiernik-jankiel-yankiel/index.html">Wiernik, Jankiel (Yankiel)</a></li>
 				<li><a href="/w/willenberg-samuel/index.html">Willenberg, Samuel</a></li>
-				<li><a href="/z/zabecki-franciszek/index.html">Ząbecki, Franciszek</a></li>
+				<li><a href="/z/zabecki-franciszek/index.html">Z&#261;becki, Franciszek</a></li>
 			</ul>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
