--- a/z/zabecki-franciszek/index.html
+++ b/z/zabecki-franciszek/index.html
@@ -7,7 +7,7 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <!-- end bbinclude -->
-	<title>Ząbecki, Franciszek | Holocaust Encyclopedia</title>
+	<title>Z&#261;becki, Franciszek | Holocaust Encyclopedia</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
@@ -17,12 +17,12 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				Ząbecki, Franciszek
+				Z&#261;becki, Franciszek
 			</h2>
 			<audio controls src="/_assets/ZabeckiFranciszek.mp3">
 			</audio>
 			<p>
-				Franciszek Ząbecki was a Polish railway worker employed at <a href="/t/treblinka/index.html">Treblinka</a> Station from May 1941 as a rail traffic controller. He was interrogated on 21 December 1945 by Polish judge <a href="/l/lukaszkiewicz-zdzislaw/index.html">Zdzis&#322;aw &#321;ukaszkiewicz</a>. Ząbecki claimed that he managed to salvage some German documents on rail transports to Treblinka, and that he handed them over to &#321;ukaszkiewicz. In 1946, &#321;ukaszkiewicz published image reproductions of three such documents without reference to Ząbecki, but they provide no useful information. (See <a href="/bibliography/index.html#Mattogno2021e">Mattogno 2021e</a>, p. 167.)
+				Franciszek Z&#261;becki was a Polish railway worker employed at <a href="/t/treblinka/index.html">Treblinka</a> Station from May 1941 as a rail traffic controller. He was interrogated on 21 December 1945 by Polish judge <a href="/l/lukaszkiewicz-zdzislaw/index.html">Zdzis&#322;aw &#321;ukaszkiewicz</a>. Z&#261;becki claimed that he managed to salvage some German documents on rail transports to Treblinka, and that he handed them over to &#321;ukaszkiewicz. In 1946, &#321;ukaszkiewicz published image reproductions of three such documents without reference to Z&#261;becki, but they provide no useful information. (See <a href="/bibliography/index.html#Mattogno2021e">Mattogno 2021e</a>, p. 167.)
 			</p>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
