--- a/i/international-military-tribunal/index.html
+++ b/i/international-military-tribunal/index.html
@@ -100,31 +100,31 @@
 				<a id="Structure"></a>The Structure
 			</h3>
 			<p>
-				By mid-1945, the Allies had designated 24 Germans, among the hundreds captured, as <q>major war criminals.</q> These would be subject to the IMT&rsquo;s unprecedented brand of justice. Of the 24, the two highest-ranking men were <a href="/g/goring-hermann/index.html">Hermann G&ouml;ring</a>, <i>Reichstag</i> president (1932–1945) and head of the <i>Luftwaffe,</i> Germany&rsquo;s air force (1935–1945), and Martin Bormann, chief of the Reich Chancellery (1941–1945). Since Bormann was missing but believed to be alive, he was tried <i>in absentia.</i> Both men were sentenced to death, but G&ouml;ring committed suicide before his execution. The remaining 22 men, all held in custody, were, in alphabetical order (see <a href="/bibliography/index.html#IMT"><i>IMT</i></a>, Vol. 22, pp. 524-587 for the verdicts, and pp. 588f. for the sentences):
+				By mid-1945, the Allies had designated 24 Germans, among the hundreds captured, as <q>major war criminals.</q> These would be subject to the IMT&rsquo;s unprecedented brand of justice. Of the 24, the two highest-ranking men were <a href="/g/goring-hermann/index.html">Hermann G&ouml;ring</a>, <i>Reichstag</i> president (1932&ndash;1945) and head of the <i>Luftwaffe,</i> Germany&rsquo;s air force (1935&ndash;1945), and Martin Bormann, chief of the Reich Chancellery (1941&ndash;1945). Since Bormann was missing but believed to be alive, he was tried <i>in absentia.</i> Both men were sentenced to death, but G&ouml;ring committed suicide before his execution. The remaining 22 men, all held in custody, were, in alphabetical order (see <a href="/bibliography/index.html#IMT"><i>IMT</i></a>, Vol. 22, pp. 524-587 for the verdicts, and pp. 588f. for the sentences):
 			</p>
 			<ul>
-				<li>Karl D&ouml;nitz, head of the <i>Kriegsmarine</i> (German Navy, 1943–1945): ten years imprisonment.</li>
-				<li>Hans Frank, head of the General Government in occupied Poland (1939–1945): death sentence.</li>
-				<li>Wilhelm Frick, Minister of the Interior (1933–1943), Reich Leader (1933–1945), Protector of Bohemia and Moravia (occupied Czechia, 1943–1945): death sentence.</li>
+				<li>Karl D&ouml;nitz, head of the <i>Kriegsmarine</i> (German Navy, 1943&ndash;1945): ten years imprisonment.</li>
+				<li>Hans Frank, head of the General Government in occupied Poland (1939&ndash;1945): death sentence.</li>
+				<li>Wilhelm Frick, Minister of the Interior (1933&ndash;1943), Reich Leader (1933&ndash;1945), Protector of Bohemia and Moravia (occupied Czechia, 1943&ndash;1945): death sentence.</li>
 				<li>Hans Fritzsche, popular radio commentator and head of the Nazi news division: acquitted.</li>
-				<li>Walther Funk, Minister of Economics (1938–1945), <i>Reichsbank</i> president (Germany&rsquo;s Central Bank, 1939–1945): life imprisonment.</li>
-				<li>Rudolf Hess, Hitler&rsquo;s Deputy (1933–1941): life imprisonment.</li>
-				<li>Alfred Jodl, Chief of Operations Staff of the Wehrmacht&rsquo;s <i>Oberkommando</i> (Supreme Command, 1939–1945): death sentence.</li>
-				<li><a href="/k/kaltenbrunner-ernst/index.html">Ernst Kaltenbrunner</a>, Chief of the <a href="/r/reichssicherheitshauptamt/index.html"><i>Reichssicherheitshauptamt</i></a>, Germany&rsquo;s Department of Homeland Security (1942–1945) and highest-ranking SS leader to be tried: death sentence.</li>
-				<li>Wilhelm Keitel, head of the Wehrmacht&rsquo;s <i>Oberkommando</i> (Supreme Command, 1938–1945): death sentence.</li>
+				<li>Walther Funk, Minister of Economics (1938&ndash;1945), <i>Reichsbank</i> president (Germany&rsquo;s Central Bank, 1939&ndash;1945): life imprisonment.</li>
+				<li>Rudolf Hess, Hitler&rsquo;s Deputy (1933&ndash;1941): life imprisonment.</li>
+				<li>Alfred Jodl, Chief of Operations Staff of the Wehrmacht&rsquo;s <i>Oberkommando</i> (Supreme Command, 1939&ndash;1945): death sentence.</li>
+				<li><a href="/k/kaltenbrunner-ernst/index.html">Ernst Kaltenbrunner</a>, Chief of the <a href="/r/reichssicherheitshauptamt/index.html"><i>Reichssicherheitshauptamt</i></a>, Germany&rsquo;s Department of Homeland Security (1942&ndash;1945) and highest-ranking SS leader to be tried: death sentence.</li>
+				<li>Wilhelm Keitel, head of the Wehrmacht&rsquo;s <i>Oberkommando</i> (Supreme Command, 1938&ndash;1945): death sentence.</li>
 				<li>Gustav Krupp von Bohlen und Halbach, major industrialist; found medically unfit for trial.</li>
-				<li>Robert Ley, head of <i>Deutsche Arbeitsfront</i> (DAF, German Labor Front, 1933–1945): committed suicide three days after being indicted.</li>
-				<li>Erich Raeder, Commander in Chief of the <i>Kriegsmarine,</i> Germany&rsquo;s navy (1935–1943): life imprisonment.</li>
-				<li>Joachim von Ribbentrop, Minister of Foreign Affairs (1938–1945): death sentence.</li>
-				<li><a href="/r/rosenberg-alfred/index.html">Alfred Rosenberg</a>, leading racial theorist and Minister of the Eastern Occupied Territories (1941–1945): death sentence.</li>
-				<li>Fritz Sauckel, <i>Gauleiter</i> (district leader) of Thuringia, and General Plenipotentiary for Labor Deployment (1942–1945): death sentence.</li>
-				<li>Hjalmar Schacht, <i>Reichsbank</i> president (Germany&rsquo;s Central Bank, 1933–1939) and Minister of Economics (1934–1937): acquitted.</li>
-				<li>Arthur Seyss-Inquart, <i>Reichskommissar</i> of the occupied Netherlands (1940–1945): death sentence.</li>
-				<li>Albert Speer, architect, and Minister of Armaments (1942–1945): twenty years imprisonment.</li>
-				<li>Julius Streicher, <i>Gauleiter</i> of Franconia (1929–1940) and publisher of the weekly tabloid newspaper <i>Der St&uuml;rmer</i>: death sentence.</li>
-				<li>Baron Konstantin von Neurath, Minister of Foreign Affairs (1932–1938): fifteen years imprisonment.</li>
-				<li>Franz von Papen, Chancellor of Germany (1932) and Vice-Chancellor (1933–1934): acquitted.</li>
-				<li>Baldur von Schirach, Head of the Hitler Youth (1933–1940), Reich Leader of Youth Education (1940-1945), and <i>Gauleiter</i> of Vienna (1940–1945): twenty years imprisonment.</li>
+				<li>Robert Ley, head of <i>Deutsche Arbeitsfront</i> (DAF, German Labor Front, 1933&ndash;1945): committed suicide three days after being indicted.</li>
+				<li>Erich Raeder, Commander in Chief of the <i>Kriegsmarine,</i> Germany&rsquo;s navy (1935&ndash;1943): life imprisonment.</li>
+				<li>Joachim von Ribbentrop, Minister of Foreign Affairs (1938&ndash;1945): death sentence.</li>
+				<li><a href="/r/rosenberg-alfred/index.html">Alfred Rosenberg</a>, leading racial theorist and Minister of the Eastern Occupied Territories (1941&ndash;1945): death sentence.</li>
+				<li>Fritz Sauckel, <i>Gauleiter</i> (district leader) of Thuringia, and General Plenipotentiary for Labor Deployment (1942&ndash;1945): death sentence.</li>
+				<li>Hjalmar Schacht, <i>Reichsbank</i> president (Germany&rsquo;s Central Bank, 1933&ndash;1939) and Minister of Economics (1934&ndash;1937): acquitted.</li>
+				<li>Arthur Seyss-Inquart, <i>Reichskommissar</i> of the occupied Netherlands (1940&ndash;1945): death sentence.</li>
+				<li>Albert Speer, architect, and Minister of Armaments (1942&ndash;1945): twenty years imprisonment.</li>
+				<li>Julius Streicher, <i>Gauleiter</i> of Franconia (1929&ndash;1940) and publisher of the weekly tabloid newspaper <i>Der St&uuml;rmer</i>: death sentence.</li>
+				<li>Baron Konstantin von Neurath, Minister of Foreign Affairs (1932&ndash;1938): fifteen years imprisonment.</li>
+				<li>Franz von Papen, Chancellor of Germany (1932) and Vice-Chancellor (1933&ndash;1934): acquitted.</li>
+				<li>Baldur von Schirach, Head of the Hitler Youth (1933&ndash;1940), Reich Leader of Youth Education (1940-1945), and <i>Gauleiter</i> of Vienna (1940&ndash;1945): twenty years imprisonment.</li>
 			</ul>
 			<p>
 				Each of them could be charged with any one, or any combination, of the above-listed four charges. Twelve men were in fact indicted on all four counts. Verdict was then rendered for each man on each individual count. A guilty verdict on even one count could suffice for the death penalty.
