--- a/s/stark-hans/index.html
+++ b/s/stark-hans/index.html
@@ -37,13 +37,13 @@
 				He insisted that the roof had two round openings of some 35 cm diameter, although the orthodoxy insists that there were (and are again) four square openings measuring some 50 cm &times; 50 cm.
 			</p>
 			<p>
-				Stark&rsquo;s statements during his pre-trial deposition and during his trial testimony about a gassing, in which he claimed to have directly participated, are contradictory. The gassing concerned either <q>200–250 Jews</q> or <q>150 or 200 [&hellip;] Jews and Poles</q>; the victims were gassed either for being Jews, including children, or because they were <q>people that had been sentenced to death by a court-martial,</q> but definitely without any children.
+				Stark&rsquo;s statements during his pre-trial deposition and during his trial testimony about a gassing, in which he claimed to have directly participated, are contradictory. The gassing concerned either <q>200&ndash;250 Jews</q> or <q>150 or 200 [&hellip;] Jews and Poles</q>; the victims were gassed either for being Jews, including children, or because they were <q>people that had been sentenced to death by a court-martial,</q> but definitely without any children.
 			</p>
 			<p>
 				Once the <a href="/z/zyklon-b/index.html">Zyklon B</a> had been dumped onto the people inside, it took only <q>a few minutes</q> for all to be quiet (hence unconscious). Yet the poison absorbed in the Zyklon-B gypsum pellets evaporates and dissipates only slowly, so it would have taken at least ten, if not twenty minutes for all victims to collapse unconscious.
 			</p>
 			<p>
-				After some 10–15 minutes, the room was allegedly opened, but it would have taken hours to <a href="/v/ventilation/index.html">ventilate</a> a room where Zyklon pellets keep emitting the poison for at least another hour.
+				After some 10&ndash;15 minutes, the room was allegedly opened, but it would have taken hours to <a href="/v/ventilation/index.html">ventilate</a> a room where Zyklon pellets keep emitting the poison for at least another hour.
 			</p>
 			<p>
 				Stark reported about homicidal gassings in two wooden houses erected in early 1942 close to the railway ramp at <a href="/b/birkenau/index.html">Birkenau</a>. However, Stark was not even present in that camp in early 1942, the railway ramp at Birkenau was built only in 1944, and such wooden gassing houses near that or any other railway ramp are completely unheard of.
